# signed_backbones

./: LICENSE  README.md  pyproject.toml  signed_backbones.py
examples/: KarateViz.ipynb  karate.txt
reproducibility/: Appendix B - Table 5 and Figure 6.ipynb  Figure 1.ipynb  Figure 2.ipynb  Figure 3.ipynb  Figure 4.ipynb  Table 2, Table 3, Table 4, Figure 5 - Backbone Extractions.ipynb  Table 2, Table 3, Table 4, Figure 5 - Results.Rmd  contact_backbone.csv  eurovision2003.csv  eurovision_backbone.csv  hypertext2009.csv  migration_backbone.csv  oecd_2019.csv  species.csv  species_backbone.csv  usmigration2018.csv
