[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "signed_backbones"
author = "Furkan Gürsoy"
author-email = "furkan.gursoy@boun.edu.tr"
home-page = "https://github.com/furkangursoy/signed_backbones"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"

